# TinyAD

./: pyproject.toml  readMe.md
src/tinyAutoDiff/AutoDiff/: common.py  var.py
src/tinyAutoDiff/AutoDiff/operators/: binary_ops.py
src/tinyAutoDiff/tests/operators/: test_add.py
src/tinyad/autoDiff/: common.py  var.py
src/tinyad/autoDiff/operators/: binary_ops.py  unary_ops.py
src/tinyad/parsing/: file.py  parser.py
src/tinyad/tests/: test_var.py
src/tinyad/tests/operators/: test_add.py
src/tinyad/tests/operators/combined_ops_tests/: base_test.py  combinedBaseTest.py  test_combined_exp.py  test_complex_combs1.py  tests1.py
src/tinyad/tests/operators/combined_ops_tests/all_operators/: basicCombinations.py  test_all_ops_basic_combs.py  test_all_ops_complex_combs1.py
src/tinyad/tests/operators/combined_ops_tests/binary_operators/: base_test.py  bin_ops_base_test.py  test_basic_combs.py  test_bin_ops_base_test.py  test_bin_ops_basic_combs.py  test_bin_ops_complex_comb2.py  test_bin_ops_complex_combs1.py  test_complex_combs1.py  test_complex_combs2.py
src/tinyad/tests/operators/combined_ops_tests/unary_operators/: test1.py  test_unary_ops_test1.py
src/tinyad/tests/operators/isolated_tests/: test_absval.py  test_add.py  test_div.py  test_exp.py  test_mul.py  test_neg.py  test_sub.py
src/tinyad/tests/parsing/: parser_base_test.py  test_parse.py
