[project]
name = "tinyad"
version = "1.0.0"

authors = [
  { name="Ayhem Bouabid", email="ayhembouabid@yandex.com" },
]

description = "A Tiny Auto Differentiation package"

requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/ayhem18/tinyAutoDiff"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "src/*",
]

exclude = [
  "tests",
  ".git",
  "demo",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tinyad"]
